fix(components/CreditCards): fixing text wrapping

--- a/src/components/CreditCards/creditCards.module.scss
+++ b/src/components/CreditCards/creditCards.module.scss
@@ -7,6 +7,7 @@
 
 .brandList {
   display: flex;
+  flex-wrap: wrap;
   gap: 1.311rem;
   list-style: none;
   li {
